# GTKSolver

./: CMakeLists.txt  README.md  build_appimage.sh  gtksolver-gui.desktop  gtksolver-trainer.appdata.xml  gtksolver-trainer.desktop  gtksolver.appdata.xml
cmake/: FindVala.cmake  ValaPrecompile.cmake
src/core/: inference.cpp  inference.h  model.cpp  model.h  tokenizer.cpp  tokenizer.h  train_main.cpp  trainer.cpp  trainer.h
src/gui/: main.vala  main_wrapper.c  model_manager.vala  resources.xml  simple_app.c  task_processor.vala  window.ui  window.vala
src/trainer/: main_trainer.vala  main_wrapper.c  resources.xml  simple_trainer.c  trainer_window.ui  trainer_window.vala  training_manager.vala
